fix: 결제 승인 API 응답값 수정